2002-05-20  Braden McDaniel  <braden@endoframe.com>

        * Makefile.am, src/Makefile.am: Add optionally built
          directories to EXTRA_DIST.

        * RPM spec file updates.

        * src/openvrml/OpenVRML/proto.h: Microsoft Visual C++ 6.0
          doesn't like friend declarations included with class
          definitions.

        * Overload operator<< and operator>> on FieldValue::Type for
          stream I/O.

2002-05-19  Braden McDaniel  <braden@endoframe.com>

        * Document --with-gl and --with-glut configure options in
          README.

        * Fixed bug in the JavaScript binding where an incompatible
          conversion from a JavaScript value to an OpenVRML::FieldValue
          value was causing an assertion failure. We now report an error
          to stdout.

2002-05-17  Braden McDaniel  <braden@endoframe.com>

        * Enable building without OpenGL and GLUT.

        * Make NodeClass::scene a public member instead of using an
          accessor method.

2002-05-16  Braden McDaniel  <braden@endoframe.com>

        * ScriptJDK.cpp: Updates to compile against JDK 1.4.

        * Eliminated downcast methods from the FieldValue classes.

        * Previous changes to compile against JDK 1.4 also work for
          JDK 1.3, as long as JNI_Onload returns JNI_VERSION_1_2.

        * Moved Route class to be a member class of Node.

        * Microsoft Visual C++ 6.0 doesn't like aggregates with members
          of class type.

        * Provide operator!= for OpenVRML::NodeInterface.

        * Doxygen comments.

2002-05-14  Braden McDaniel  <braden@endoframe.com>

        * Partial Inline node support.

        * Generate JNI headers.

        * macros/gl.m4: Added "-pthread" to GL_LIBS.

        * src/openvrml/OpenVRML/Makefile.am: Removed duplicate listing of
          "nodetypeptr.cpp".

2002-05-12  Braden McDaniel  <braden@endoframe.com>

        * Fixed problem rendering Color nodes.
